pip freeze.txt upload